Wrap all forum templates with a .forum so that our styles will apply correctly.

--- a/app/assets/stylesheets/forums/forums.css.scss
+++ b/app/assets/stylesheets/forums/forums.css.scss
@@ -1,4 +1,4 @@
-#topic {
+.forum {
   ul.breadcrumb {
     .dropdown-menu {
       max-width: inherit;
